# winregenv

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/winregenv/: __init__.py  elevation_check.py  expand_variable.py  registry_base.py  registry_context_managers.py  registry_errors.py  registry_interface.py  registry_translation.py  registry_types.py  winapi.py
test/winregenv/: test_elevation_check.py  test_elevation_check_integration.py  test_expand_variable_integration.py  test_registry_translation.py  test_registry_types.py  test_winapi.py
test/winregenv/test_registry_base/: conftest.py  test_create_update.py  test_delete.py  test_helpers.py  test_read_list.py
test/winregenv/test_registry_base_integration/: __init__.py  conftest.py  test_create_update.py  test_delete.py  test_read_list.py
test/winregenv/test_registry_context_manager/: conftest.py  test_context_manager.py
test/winregenv/test_registry_interface/: conftest.py  test_elevation_check_lazy.py  test_read_only.py  test_registry_interface.py
test/winregenv/test_registry_interface_integration/: conftest.py  test_read_only_integration.py
